Development -Satishxi7/src/objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Occupancy__c</fullName>
        <label>Max Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Accessible__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type A</fullName>
                </value>
                <value>
                    <fullName>Type B</fullName>
                </value>
                <value>
                    <fullName>Type C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Room Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>